# simple-kanban

./: .dockerignore  .gitignore  .mcp.json.example  BREADBOARD.md  CLAUDE.md  Dockerfile  Makefile  QUESTIONS.md  README.md  SHAPING.md  docker-compose.yml  fly.toml  treehouse.toml  zensical.toml
.claude/skills/project-manager-simple-kanban/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml  docs.yml  keepalive.yml  publish-mcp-image.yml  release-cli.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_demo_cards.py  0003_epic_story_model.py  0004_auth_tables.py  0005_boards.py  0006_personal_access_tokens.py  0007_card_dependencies.py  0008_card_links.py  0009_card_comments.py  0010_board_members.py  0011_board_autosync_flags.py  0012_activity_log.py  0013_activity_restored_action.py  0014_card_fields.py  0015_card_needs_human.py  0016_saved_views.py  0017_card_search_vector.py  0018_activity_purged_action.py  0019_activity_transition_columns.py  0020_pat_scope.py  0021_card_templates.py  1f2fe64fcab2_soft_delete_cards_and_epics_deleted_at.py  36af407aaa9c_epic_project_fields_target_date_lead.py  f7b35130c1f4_cycles_iterations.py
backend/app/: activity.py  auth.py  auth_models.py  authz.py  autosync.py  card_query.py  db.py  epic_rollup.py  main.py  metrics.py  models.py  observability.py  ordering.py  pagination.py  ratelimit.py  schemas.py  seed.py  tokens.py  users.py
backend/app/routers/: boards.py  cards.py  cycles.py  epics.py  labels.py  members.py  templates.py  tokens.py  views.py  webhooks.py
backend/tests/: conftest.py  test_card_crud.py  test_cards.py  test_move.py
backend/tests/integration/: conftest.py  test_activity_feed.py  test_activity_filters.py  test_activity_log.py  test_auth.py  test_authz.py  test_autosync.py  test_batch_update.py  test_board_members.py  test_boards.py  test_card_comments.py  test_card_crud.py  test_card_dependencies.py  test_card_fields.py  test_card_links.py  test_card_templates.py  test_cards.py  test_cycle_metrics.py  test_cycles.py  test_db_resilience.py  test_dispatch.py  test_epic_project_fields.py  test_epic_rollup.py  test_epic_story.py  test_github_login.py  test_health.py  test_metrics.py  test_move.py  test_needs_human.py  test_pat_membership.py  test_payload_hardening.py  test_query.py  test_rate_limit.py  test_ready_blocked.py  test_role_enforcement.py  test_saved_views.py  test_search.py  test_security_headers.py  test_seed.py  test_shared_boards.py  (+5 more)
backend/tests/unit/: test_cycle_metrics.py  test_epic_rollup.py  test_metrics.py  test_observability.py  test_ordering.py  test_pagination.py  test_query_grammar.py  test_schemas.py  test_webhooks.py
docs/: CONTEXT.md  DEVELOPER-WORKFLOWS.md  FRAME.md  PRD.md  REQS.md  SHAPING.md  UAT-cli-mcp-v0.2.2.md  agent-pm-dogfooding-log.md  auth-notes-for-realtime-platform.md  index.md  simple-markdown-vision.md
docs-tooling/: pyproject.toml
docs/adr/: 0001-tech-stack-and-monorepo.md  0002-postgres-and-alembic-from-day-one.md  0003-single-artifact-deployment.md  0004-hosting-and-cicd.md  0005-api-first-mcp-ready.md  0006-data-model-and-domain-decisions.md  0007-no-auth-concurrency-and-realtime.md  0008-implementation-stack-details.md  0009-epic-as-first-class-entity.md  0010-optional-agent-token-auth.md  0011-github-cookie-session-auth.md  0012-multi-board-with-ownership.md  0013-board-authorization.md  0014-agent-personal-access-tokens.md  0015-mcp-board-scoping-and-retiring-api-tokens.md  0016-github-pr-board-autosync.md  0017-observability.md
docs/blog/: one-origin-one-cookie.md
docs/guides/: agent-onboarding.md  autosync-github-setup.md  e2e-testing-with-auth.md  edge-hardening.md
docs/milestone-2/: BREADBOARD.md  FRAME.md  SHAPING.md  SLICES.md  V3-SESSION-PROMPT.md  spike-p3-versioning.md
docs/milestone-3/: BREADBOARD.md  FRAME.md  SHAPING.md  SLICES.md  V10-SESSION-PROMPT.md  V10-UAT.md  V6-SESSION-PROMPT.md  V8-SESSION-PROMPT.md  landing-mockup.html  spike-fastapi-users-sync.md
docs/milestone-5/: BREADBOARD.md  FRAME.md  SHAPING.md  SLICES.md
docs/milestone-6/: SHAPING.md  SLICES.md
docs/superpowers/plans/: 2026-07-07-card-move-reorder.md
docs/superpowers/specs/: 2026-07-07-card-move-reorder-design.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/design-mockups/: board-directions.html  palettes.html
frontend/e2e/: activity.spec.ts  authz.spec.ts  boards.spec.ts  card-fields.spec.ts  card-markdown.spec.ts  command-palette.spec.ts  dashboard.spec.ts  dependencies.spec.ts  edit-drag.spec.ts  epic-rollup.spec.ts  epic-story.spec.ts  helpers.ts  keyboard.spec.ts  links-notes.spec.ts  login.spec.ts  needs-human.spec.ts  saved-views.spec.ts  search.spec.ts  smoke.spec.ts  tokens.spec.ts  trash.spec.ts  ui-polish.spec.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: activity.svelte.ts  api.ts  board.svelte.ts  dashboard.svelte.ts  keyboard.svelte.ts  members.svelte.ts  session.svelte.ts  theme.svelte.ts  tokens.svelte.ts  trash.svelte.ts
frontend/src/lib/components/: Activity.svelte  Board.svelte  BoardSwitcher.svelte  BoardTable.svelte  Brand.svelte  Card.svelte  CardForm.svelte  CardModal.svelte  Column.svelte  CommandPalette.svelte  Dashboard.svelte  EpicForm.svelte  EpicItem.svelte  EpicModal.svelte  Epics.svelte  Landing.svelte  Members.svelte  Modal.svelte  ShortcutsHelp.svelte  SideNav.svelte  (+3 more)
kanban-cli/: README.md  pyproject.toml
kanban-cli/kanban_cli/: __init__.py  __main__.py  cli.py  config.py
kanban-cli/packaging/: pyinstaller_entry.py
kanban-cli/tests/: test_cli.py
kanban-client/: README.md  pyproject.toml
kanban-client/kanban_client/: __init__.py  client.py
kanban-client/tests/: test_client.py
mcp/: Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml
mcp/kanban_mcp/: __init__.py  __main__.py  api.py  config.py  server.py
mcp/tests/: test_api.py  test_server.py
scripts/git-hooks/: pre-push
(+9 files in other folders)
