[project]
name = "simple-kanban-backend"
version = "0.1.0"
description = "Simple Kanban MVP backend — FastAPI + sync SQLAlchemy 2.0 + psycopg v3"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
