[project]
name = "simple-kanban-backend"
version = "0.1.0"
description = "Simple Kanban MVP backend — FastAPI + sync SQLAlchemy 2.0 + psycopg v3"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.51",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    # Human auth foundation (Milestone 3 V6, ADR 0011). fastapi-users' user store
    # is async-only, so this pulls in the SQLAlchemy async stack (greenlet) used by
    # a second, async engine alongside the sync one (ADR 0008 preserved).
    "fastapi-users[sqlalchemy,oauth]>=14",
    "greenlet>=3.1",
    # Error tracking (KAN-172, ADR 0017). Only activated when SENTRY_DSN is set —
    # a no-op otherwise — so dev + tests never report. Installed so prod can opt in
    # via a Fly secret with no code change; its FastAPI/Starlette integration is
    # auto-enabled by sentry_sdk.init().
    "sentry-sdk[fastapi]>=2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.15.21",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the backend root (where the `app` package lives) on sys.path so tests in
# tests/unit and tests/integration can `import app.*` regardless of CWD.
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
# Generated Alembic migrations follow their own template conventions.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# pycodestyle errors, pyflakes, and import sorting.
select = ["E", "F", "I"]
