[project]
name = "simple-kanban-cli"
version = "0.1.0"
description = "The `kan` CLI over the Simple Kanban API (/api/v1)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "kanban-client",
]

# The shared API client lives in a sibling package; depend on it by path (not a
# repo-root uv workspace) so backend/, mcp/, kanban-client/, and kanban-cli/
# each stay independently locked (KAN-21).
[tool.uv.sources]
kanban-client = { path = "../kanban-client", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
kan = "kanban_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kanban_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
