[project]
name = "simple-kanban-mcp"
version = "0.1.0"
description = "MCP server exposing the Simple Kanban API (/api/v1) as agent tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
kanban-mcp = "kanban_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kanban_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
